Overhaul/rewrite event handler